<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@drawable/bubbles">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spiice"
        android:textSize="96dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/discoverButton"
        android:textColor="#FF120E21"
        android:gravity="center"/>

    <Button
        android:id="@+id/discoverButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discover_the_platform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView"
        android:layout_marginBottom="37dp"
        android:background="@drawable/discover_btn_background"
        android:textColor="@color/white"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="98dp"
        android:text="@string/you_have_an_account_log_in"
        android:textSize="18sp"
        android:gravity="center"
        android:textAlignment="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>